Added globe using three.js

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
   <style>
     body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
+      background-color: #1f1f1f;
+      /* Темный цвет фона */
+      color: #ffffff;
+      /* Цвет текста */
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
     }
 
     header {
-      background-color: #333333; /* Цвет заголовка */
+      background-color: #333333;
+      /* Цвет заголовка */
       padding: 20px;
       text-align: center;
     }
 
     nav {
-      background-color: #222222; /* Цвет меню */
+      background-color: #222222;
+      /* Цвет меню */
       width: 250px;
       padding: 20px;
       float: left;
@@ -36,22 +41,26 @@
 
     nav ul li a {
       display: block;
-      color: #ffffff; /* Цвет ссылок */
+      color: #ffffff;
+      /* Цвет ссылок */
       text-decoration: none;
       padding: 5px;
     }
 
     nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
+      background-color: #555555;
+      /* Цвет при наведении */
     }
 
     main {
       padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
+      margin-left: 290px;
+      /* Чтобы контент не перекрывал меню */
       text-align: left;
     }
   </style>
 </head>
+
 <body>
   <header>
     <h1>CTF Burger</h1>
@@ -60,7 +69,8 @@
   <nav>
     <ul>
       <li><a href="why_we_must_solve_ctfs.html">Зачем решать ctf?</a></li>
-      <li><a href="ctf_teams.html">Ctf команды(можно подписаться на каждую и следить за материалами, мероприятиями, райтапами)</a></li>
+      <li><a href="ctf_teams.html">Ctf команды(можно подписаться на каждую и следить за материалами, мероприятиями,
+          райтапами)</a></li>
       <li><a href="cool_ctfers_and_not_only.html">Крутые ctfеры и не только</a></li>
       <li><a href="write-ups.html">Врайтапы, записи занятий</a></li>
       <li><a href="tasks(articles, video).html">Таски(+ статьи, видео)</a></li>
@@ -82,10 +92,50 @@
     <p>Потом его можно будет передать следующему покалению мэишников.</p>
     <p>Здесь я расписал важную по моему мнению инфу.</p>
     <p>Думаю каждый будет потихоньку добавлять какой-нибудь матерал и это будет полезно для нас.</p>
-    <p>Ещё из идей добавить какой-нибудь дашбоард или канбан доску для решения ctf, но кажется на сайте это не оч удобно.</p>
-    <p>Поскольку все могут в разное время(там можно писать кто работал над таском и что у него вышло, чтобы кто-то другой дорешал)</p>
+    <p>Ещё из идей добавить какой-нибудь дашбоард или канбан доску для решения ctf, но кажется на сайте это не оч
+      удобно.</p>
+    <p>Поскольку все могут в разное время(там можно писать кто работал над таском и что у него вышло, чтобы кто-то
+      другой дорешал)</p>
     <p>Вообще в планах, пробовать расширять сайт между другими группами и даже курсами, но это уже как пойдёт</p>
     <p>Ну ебаный сыр, почему все идет елочкой и по центру, Ахмад пофикси пж, хотя сам зафиксил.</p>
   </main>
+
+  <div id="globe"></div>
+
+  <script type="module">
+    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.118.3/build/three.module.js';
+    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.118.3/examples/jsm/controls/OrbitControls.js';
+
+
+    var scene = new THREE.Scene();
+    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+    var renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.getElementById('globe').appendChild(renderer.domElement);
+
+    var controls = new OrbitControls(camera, renderer.domElement);
+
+    var geometry = new THREE.SphereGeometry(1, 32, 32);
+    var texture = new THREE.TextureLoader().load('assets/images/earth.png'); // path to your earth texture
+    var material = new THREE.MeshBasicMaterial({ map: texture });
+    var sphere = new THREE.Mesh(geometry, material);
+    scene.add(sphere);
+
+    camera.position.z = 2;
+
+    var animate = function () {
+      requestAnimationFrame(animate);
+
+      sphere.rotation.x += 0.01;
+      sphere.rotation.y += 0.01;
+
+      renderer.render(scene, camera);
+    };
+
+    animate();
+  </script>
+
 </body>
+
 </html>
