changed site style into hacker one

--- a/Events.html
+++ b/Events.html
@@ -1,57 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
-  <style>
-    body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333333; /* Цвет заголовка */
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #222222; /* Цвет меню */
-      width: 250px;
-      padding: 20px;
-      float: left;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      margin-bottom: 10px;
-    }
-
-    nav ul li a {
-      display: block;
-      color: #ffffff; /* Цвет ссылок */
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
-    }
-
-    main {
-      padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Мероприятия, новые соревнования ctf</h1>
@@ -62,19 +16,21 @@
     </ul>
   </nav>
   <main>
-  <p>
-    <mark style="background: #FFB86CA6;">Мероприятия, новые соревнования ctf:</mark>
-  </p>
-  <p>
-    CTFtime events <a href="https://t.me/ctftimeorg_events">https://t.me/ctftimeorg_events</a>
-  </p>
-  <p>
-    LetoCTF <a href="@letoctfbot">letoctfbot</a> - каждую неделю появляются задания, кто быстрее всех решит получит шанс съездить бесплатно в летнюю школу ctf - начало с 1го июня
-  </p>
-  <p>
-    Vkactf 3 и 4 июня
-  </p>
+    <p>
+      <mark style="background: #FFB86CA6;">Мероприятия, новые соревнования ctf:</mark>
+    </p>
+    <p>
+      CTFtime events <a href="https://t.me/ctftimeorg_events">https://t.me/ctftimeorg_events</a>
+    </p>
+    <p>
+      LetoCTF <a href="@letoctfbot">letoctfbot</a> - каждую неделю появляются задания, кто быстрее всех решит получит
+      шанс съездить бесплатно в летнюю школу ctf - начало с 1го июня
+    </p>
+    <p>
+      Vkactf 3 и 4 июня
+    </p>
   </main>
 
 </body>
+
 </html>
