--- a/company_in_cybersec.html
+++ b/company_in_cybersec.html
@@ -1,57 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
   <style>
-    body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
 
-    header {
-      background-color: #333333; /* Цвет заголовка */
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #222222; /* Цвет меню */
-      width: 250px;
-      padding: 20px;
-      float: left;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      margin-bottom: 10px;
-    }
-
-    nav ul li a {
-      display: block;
-      color: #ffffff; /* Цвет ссылок */
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
-    }
-
-    main {
-      padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
-      text-align: left;
-    }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Компании в ИБ</h1>
@@ -62,38 +18,48 @@
     </ul>
   </nav>
   <main>
-<h2>Компании в ИБ:</h2>
-<p><mark>В России:</mark></p>
-<ul>
-<li>Positive technologies</li>
-<li>Лаборатория Касперского</li>
-<li>Bi Zone</li>
-<li>Group-IB</li>
-<li>Dr.Web</li>
-<li>AnyRun <a href="https://hh.ru/vacancy/79867915?from=share_android">https://hh.ru/vacancy/79867915?from=share_android</a></li>
-<li>Ростелеком</li>
-<li>Оксиджен Софтвере</li>
-<li>R-Vision</li>
-<li>Крок</li>
-<li>Trend Micro</li>
-<li>Перспективный мониторинг</li>
-<li>Код безопасности</li>
-<li>AV Soft - небольшая компания (20-25 сотрудников, из которых только 2-3 отвечают за вирусную аналитику). Условие работы - не менее 20 часов в неделю, можно выбирать любое удобное время, даже в выходные. Штат компании в основном состоит из студентов. Руководство компании не очень хорошо разбирается в ИБ, поэтому развитие основывается на самообразовании. Каждую неделю формируется список задач, которые нужно выполнить, даже если приходится изобретать велосипед. Компания может предоставить первый опыт работы и возможность попробовать себя в коллективе. Хороший опыт для студентов.</li>
-<li>Security Vision</li>
-<li>Xello</li>
-<li>Аринтег</li>
-<li>Varonis Systems</li>
-<li>Инфосистемы Jet</li>
-<li>Angara</li>
-<li>Ланит</li>
-<li>Информзащита - проводят стажировку в июне</li>
-</ul>
-<p><mark>За рубежом:</mark></p>
-<ul>
-<li>Trend Micro - японская компания, имеющая представительство в России</li>
-</ul>
-<p>Ссылка на крутую картинку снизу:</p>
-<p><a href="https://www.tadviser.ru/images/8/8a/Информационная_безопасность_2023_6_vstr2_01.jpg">https://www.tadviser.ru/images/8/8a/Информационная_безопасность_2023_6_vstr2_01.jpg</a></p>
-</main>
+    <h2>Компании в ИБ:</h2>
+    <p><mark>В России:</mark></p>
+    <ul>
+      <li>Positive technologies</li>
+      <li>Лаборатория Касперского</li>
+      <li>Bi Zone</li>
+      <li>Group-IB</li>
+      <li>Dr.Web</li>
+      <li>AnyRun <a
+          href="https://hh.ru/vacancy/79867915?from=share_android">https://hh.ru/vacancy/79867915?from=share_android</a>
+      </li>
+      <li>Ростелеком</li>
+      <li>Оксиджен Софтвере</li>
+      <li>R-Vision</li>
+      <li>Крок</li>
+      <li>Trend Micro</li>
+      <li>Перспективный мониторинг</li>
+      <li>Код безопасности</li>
+      <li>AV Soft - небольшая компания (20-25 сотрудников, из которых только 2-3 отвечают за вирусную аналитику).
+        Условие работы - не менее 20 часов в неделю, можно выбирать любое удобное время, даже в выходные. Штат компании
+        в основном состоит из студентов. Руководство компании не очень хорошо разбирается в ИБ, поэтому развитие
+        основывается на самообразовании. Каждую неделю формируется список задач, которые нужно выполнить, даже если
+        приходится изобретать велосипед. Компания может предоставить первый опыт работы и возможность попробовать себя в
+        коллективе. Хороший опыт для студентов.</li>
+      <li>Security Vision</li>
+      <li>Xello</li>
+      <li>Аринтег</li>
+      <li>Varonis Systems</li>
+      <li>Инфосистемы Jet</li>
+      <li>Angara</li>
+      <li>Ланит</li>
+      <li>Информзащита - проводят стажировку в июне</li>
+    </ul>
+    <p><mark>За рубежом:</mark></p>
+    <ul>
+      <li>Trend Micro - японская компания, имеющая представительство в России</li>
+    </ul>
+    <p>Ссылка на крутую картинку снизу:</p>
+    <p><a
+        href="https://www.tadviser.ru/images/8/8a/Информационная_безопасность_2023_6_vstr2_01.jpg">https://www.tadviser.ru/images/8/8a/Информационная_безопасность_2023_6_vstr2_01.jpg</a>
+    </p>
+  </main>
 </body>
+
 </html>
