--- a/cool_channels.html
+++ b/cool_channels.html
@@ -1,57 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
-  <style>
-    body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333333; /* Цвет заголовка */
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #222222; /* Цвет меню */
-      width: 250px;
-      padding: 20px;
-      float: left;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      margin-bottom: 10px;
-    }
-
-    nav ul li a {
-      display: block;
-      color: #ffffff; /* Цвет ссылок */
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
-    }
-
-    main {
-      padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Крутые каналы</h1>
@@ -62,55 +16,57 @@
     </ul>
   </nav>
   <main>
-  <p>
-    <mark style="background: #FFB86CA6;">Крутые каналы:</mark>
-  </p>
-  <p>
-    В России:
-  </p>
-  <ul>
-    <li><a href="https://t.me/spbctf">@spbctf</a> - чатик про CTF в Питере - наверно самая крупная ctf движуха в России</li>
-    <li><a href="https://t.me/RalfHackerChannel">ralf hacker</a></li>
-  </ul>
-  <p>
-    Реверсеров:
-  </p>
-  <ul>
-    <li><a href="https://t.me/greg0r0_life_and_work">Gregoro life&amp;work</a></li>
-    <li><a href="https://t.me/dxe_0x0">Violent</a></li>
-    <li><a href="https://t.me/reverse_dungeon">Reverse dungeon</a></li>
-    <li><a href="https://t.me/rep41n">Реверсинг боль</a></li>
-    <li><a href="https://t.me/TrickeryHub">Trickery hub</a></li>
-    <li><a href="https://t.me/disasm_me_ch">disasmme</a></li>
-  </ul>
-  <p>
-    Язык С:
-  </p>
-  <ul>
-    <li><a href="https://t.me/segfault_drec">Парень из МФТИ</a></li>
-  </ul>
-  <p>
-    DevOps:
-  </p>
-  <ul>
-    <li><a href="https://t.me/jtprogru_channel">Мишка на севере</a></li>
-  </ul>
-  <p>
-    Сети:
-  </p>
-  <ul>
-    <li><a href="https://t.me/c4s73r_channel">Caster</a></li>
-  </ul>
-  <p>
-    malware:
-  </p>
-  <ul>
-    <li><a href="https://t.me/vxunderground">https://t.me/vxunderground</a></li>
-  </ul>
-  <p>
-    <mark style="background: #FF5582A6;">Зарубежные:</mark>
-  </p>
+    <p>
+      <mark style="background: #FFB86CA6;">Крутые каналы:</mark>
+    </p>
+    <p>
+      В России:
+    </p>
+    <ul>
+      <li><a href="https://t.me/spbctf">@spbctf</a> - чатик про CTF в Питере - наверно самая крупная ctf движуха в
+        России</li>
+      <li><a href="https://t.me/RalfHackerChannel">ralf hacker</a></li>
+    </ul>
+    <p>
+      Реверсеров:
+    </p>
+    <ul>
+      <li><a href="https://t.me/greg0r0_life_and_work">Gregoro life&amp;work</a></li>
+      <li><a href="https://t.me/dxe_0x0">Violent</a></li>
+      <li><a href="https://t.me/reverse_dungeon">Reverse dungeon</a></li>
+      <li><a href="https://t.me/rep41n">Реверсинг боль</a></li>
+      <li><a href="https://t.me/TrickeryHub">Trickery hub</a></li>
+      <li><a href="https://t.me/disasm_me_ch">disasmme</a></li>
+    </ul>
+    <p>
+      Язык С:
+    </p>
+    <ul>
+      <li><a href="https://t.me/segfault_drec">Парень из МФТИ</a></li>
+    </ul>
+    <p>
+      DevOps:
+    </p>
+    <ul>
+      <li><a href="https://t.me/jtprogru_channel">Мишка на севере</a></li>
+    </ul>
+    <p>
+      Сети:
+    </p>
+    <ul>
+      <li><a href="https://t.me/c4s73r_channel">Caster</a></li>
+    </ul>
+    <p>
+      malware:
+    </p>
+    <ul>
+      <li><a href="https://t.me/vxunderground">https://t.me/vxunderground</a></li>
+    </ul>
+    <p>
+      <mark style="background: #FF5582A6;">Зарубежные:</mark>
+    </p>
   </main>
 
 </body>
+
 </html>
