--- a/why_we_must_solve_ctfs.html
+++ b/why_we_must_solve_ctfs.html
@@ -1,57 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
-  <style>
-    body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333333; /* Цвет заголовка */
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #222222; /* Цвет меню */
-      width: 250px;
-      padding: 20px;
-      float: left;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      margin-bottom: 10px;
-    }
-
-    nav ul li a {
-      display: block;
-      color: #ffffff; /* Цвет ссылок */
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
-    }
-
-    main {
-      padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Зачем решать ctf?</h1>
@@ -66,7 +20,9 @@
     <p>Практика, увеличение темпа работы</p>
     <p>Расширение кругозора</p>
     <p>Позволяет быть в теме</p>
-    <p>Зная реальные атаки, реальную работу серверов прочих программ в организации, лучше понимаешь как выстроить безопасность, помогают знания с ctf</p>
+    <p>Зная реальные атаки, реальную работу серверов прочих программ в организации, лучше понимаешь как выстроить
+      безопасность, помогают знания с ctf</p>
   </main>
 </body>
+
 </html>
