--- a/Burger_komanda_history.html
+++ b/Burger_komanda_history.html
@@ -1,57 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>CTF Burger</title>
-  <style>
-    body {
-      background-color: #1f1f1f; /* Темный цвет фона */
-      color: #ffffff; /* Цвет текста */
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333333; /* Цвет заголовка */
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #222222; /* Цвет меню */
-      width: 250px;
-      padding: 20px;
-      float: left;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      margin-bottom: 10px;
-    }
-
-    nav ul li a {
-      display: block;
-      color: #ffffff; /* Цвет ссылок */
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #555555; /* Цвет при наведении */
-    }
-
-    main {
-      padding: 20px;
-      margin-left: 290px; /* Чтобы контент не перекрывал меню */
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Burger Команда (history)</h1>
@@ -68,5 +22,5 @@
     <img src="b51c82a5-1046-49d4-813d-5ce7157c11d3.jpg" alt="описание_изображения">
   </main>
 </body>
-</html>
 
+</html>
