--- a/company_in_cybersec.html
+++ b/company_in_cybersec.html
@@ -3,9 +3,7 @@
 
 <head>
   <title>CTF Burger</title>
-  <style>
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
