Created folder pages for putting all the other pages so the project be more cleaner, and moved the image from mpeictf to the assets/images

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 
   <nav>
     <ul>
-      <li><a href="why_we_must_solve_ctfs.html">Зачем решать ctf?</a></li>
-      <li><a href="ctf_teams.html">Ctf команды(можно подписаться на каждую и следить за материалами, мероприятиями,
+      <li><a href="pages/why_we_must_solve_ctfs.html">Зачем решать ctf?</a></li>
+      <li><a href="pages/ctf_teams.html">Ctf команды(можно подписаться на каждую и следить за материалами,
+          мероприятиями,
           райтапами)</a></li>
-      <li><a href="cool_ctfers_and_not_only.html">Крутые ctfеры и не только</a></li>
-      <li><a href="write-ups.html">Врайтапы, записи занятий</a></li>
-      <li><a href="tasks(articles, video).html">Таски(+ статьи, видео)</a></li>
-      <li><a href="Events.html">Мероприятия, новые соревнования ctf</a></li>
-      <li><a href="cool_channels.html">Крутые каналы</a></li>
-      <li><a href="tasks(articles, video).html">Таски(+ статьи, видео)</a></li>
-      <li><a href="cool_ctfs_other_tournaments.html">Крутые ctf и не только соревнования</a></li>
-      <li><a href="professions_in_cybersec.html">Профессии, направления в ИБ, в чем состоит работа</a></li>
-      <li><a href="company_in_cybersec.html">Компании в ИБ</a></li>
-      <li><a href="compliaence.html">Бумажная безопасность</a></li>
-      <li><a href="Burger_komanda_history.html">Burger Команда (history)</a></li>
-      <li><a href="useful_materials_for_internship.html">Полезные материалы для стажировки и прочее</a></li>
+      <li><a href="pages/cool_ctfers_and_not_only.html">Крутые ctfеры и не только</a></li>
+      <li><a href="pages/write-ups.html">Врайтапы, записи занятий</a></li>
+      <li><a href="pages/tasks(articles, video).html">Таски(+ статьи, видео)</a></li>
+      <li><a href="pages/Events.html">Мероприятия, новые соревнования ctf</a></li>
+      <li><a href="pages/cool_channels.html">Крутые каналы</a></li>
+      <li><a href="pages/tasks(articles, video).html">Таски(+ статьи, видео)</a></li>
+      <li><a href="pages/cool_ctfs_other_tournaments.html">Крутые ctf и не только соревнования</a></li>
+      <li><a href="pages/professions_in_cybersec.html">Профессии, направления в ИБ, в чем состоит работа</a></li>
+      <li><a href="pages/company_in_cybersec.html">Компании в ИБ</a></li>
+      <li><a href="pages/compliaence.html">Бумажная безопасность</a></li>
+      <li><a href="pages/Burger_komanda_history.html">Burger Команда (history)</a></li>
+      <li><a href="pages/useful_materials_for_internship.html">Полезные материалы для стажировки и прочее</a></li>
     </ul>
   </nav>
 
