--- a/pages/Burger_komanda_history.html
+++ b/pages/Burger_komanda_history.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CTF Burger</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 
 <body>
@@ -12,14 +12,14 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Если че это кнопка назад</a></li>
+      <li><a href="../index.html">Если че это кнопка назад</a></li>
     </ul>
   </nav>
   <main>
     <h2>Привет, мир!</h2>
     <p>20.05.2023 - 21.05.2023</p>
     <p>1, 2, 3, 10 места (без учета приглашенного вьетнамца vietzettt)</p>
-    <img src="b51c82a5-1046-49d4-813d-5ce7157c11d3.jpg" alt="описание_изображения">
+    <img src="../assets/images/mpeictf-ranking.jpg" alt="описание_изображения">
   </main>
 </body>
 
