--- a/pages/cool_ctfers_and_not_only.html
+++ b/pages/cool_ctfers_and_not_only.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>CTF Burger</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="index.html">Если че это кнопка назад</a></li>
+      <li><a href="../index.html">Если че это кнопка назад</a></li>
     </ul>
   </nav>
   <main>
