--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </nav>
 
   <main>
-    <h2>Привет, мир!</h2>
+    <h2>Привет, мир!!</h2>
     <p>Кароче я подумал, а почему мы нам не запилить свой сайт.</p>
     <p>Потом его можно будет передать следующему покалению мэишников.</p>
     <p>Здесь я расписал важную по моему мнению инфу.</p>
