fixed the path for felix picture

--- a/pages/useful_materials_for_internship.html
+++ b/pages/useful_materials_for_internship.html
@@ -24,7 +24,7 @@
       (сюда тоже кину свои райтапы по книге и райтапы другого чувака тоже по книге)</p>
     <p>(Сюда ещё можно было бы покидать задания и решения с школы21, но видимо не стоит это сильно распространять)</p>
     <p>(Бляха почему надпись опять уехала влево, надеюсь Ахмад пофиксит)</p>
-    <p>Я пофиксил - Ахмад<img src="assets/images/felix.png" width="40" height="60"></p>
+    <p>Я пофиксил - Ахмад<img src="../assets/images/felix.png" width="40" height="60"></p>
   </main>
 </body>
 
