Add information about our result in vkactf2023

--- a/pages/Burger_komanda_history.html
+++ b/pages/Burger_komanda_history.html
@@ -20,6 +20,13 @@
     <p>20.05.2023 - 21.05.2023</p>
     <p>1, 2, 3, 10 места (без учета приглашенного вьетнамца vietzettt)</p>
     <img src="../assets/images/mpeictf-ranking.jpg" alt="описание_изображения">
+    <p>03.06.2023 - 04.06.2023</p>
+    <p>Первая за долгое время наша командная игра</p>
+    <p>CTF оказался далеко не детский, смотря на задание по реверсу я аху8ел, но потом согласно райтапу оказалось, что
+      он решался практически без реверса, хорошо что я не тратил много времени на задание, а решил потыкать и другие
+      таски</p>
+    <p>И как итог почетное 73 место, спасибо Ахмаду за решенное крутое задание.</p>
+    <img src="../assets/images/vkactf2023-ranking.jpg" alt="описание_изображения">
   </main>
 </body>
 
