--- a/pages/Burger_komanda_history.html
+++ b/pages/Burger_komanda_history.html
@@ -26,6 +26,7 @@
     <p>CTF оказался далеко не детский, смотря на задание по реверсу я аху8ел, но потом согласно райтапу оказалось, что
       он решался практически без реверса, хорошо что я не тратил много времени на задание, а решил потыкать и другие
       таски</p>
+    <p>Конечно мы могли решить намного лучше и обогнать unicorn-у, но это уже нам на будущее.</p>
     <p>И как итог почетное 73 место, спасибо Ахмаду за решенное крутое задание.</p>
     <img src="../assets/images/vkactf2023-ranking.jpg" alt="описание_изображения">
   </main>
