--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="pages/Burger_komanda_history.html">Burger Команда (history)</a></li>
       <li><a href="pages/useful_materials_for_internship.html">Полезные материалы для стажировки и прочее</a></li>
       <li><a href="pages/how_to_ctf.html">Как расти в навыках, в ctf</a></li>
+      <li><a href="pages/our_plans.html">Планы</a></li>
     </ul>
   </nav>
 
