--- a/pages/our_plans.html
+++ b/pages/our_plans.html
@@ -24,6 +24,10 @@
             приоритетное направление в ctf
         </p>
         <p>
+            Также в планах по возможности пробовать нарешивать таски на платформах, просмотры обучающих видео -
+            forkbomb, picoctf, HTB и тд
+        </p>
+        <p>
             Также считаю правильным выполнить чеклист Макса со стажировки в информзащиты, я заметил, что некоторые темы
             даже пересекаются с лабами по ТЗИСК<a
                 href="https://drive.google.com/drive/folders/156vVDlXD3hmR3JXKyj4-TaHrGLWiyHSC">https://drive.google.com/drive/folders/156vVDlXD3hmR3JXKyj4-TaHrGLWiyHSC</a>
