--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="pages/useful_materials_for_internship.html">Полезные материалы для стажировки и прочее</a></li>
       <li><a href="pages/how_to_ctf.html">Как расти в навыках, в ctf</a></li>
       <li><a href="pages/our_plans.html">Планы</a></li>
+      <li><a href="pages/how_to_start_in_reverse.html">Как стартануть в реверсе и не только в нем</a></li>
     </ul>
   </nav>
 
