how to start in reverse part 2

--- a/pages/how_to_start_in_reverse.html
+++ b/pages/how_to_start_in_reverse.html
@@ -49,7 +49,8 @@
             </li>
             <li>
                 <p>Статьи Яши есть и в видео - так поидее легче и быстрее прокачиваться, но я их пока не смотрел зыыыы
-                    <a href="https://youtube.com/@yashechka85">https://youtube.com/@yashechka85</a></p>
+                    <a href="https://youtube.com/@yashechka85">https://youtube.com/@yashechka85</a>
+                </p>
             </li>
             <li>
                 <p>Также думаю первые 5-10 из (<a
@@ -70,6 +71,32 @@
                 <p>Думаю в других направлениях ctf тоже нужно смотреть сезоны от forkbomb <a
                         href="https://forkbomb.ru/tasks">https://forkbomb.ru/tasks</a></p>
             </li>
+            <p>Как я сам стартовал в реверсе, что пробовал, чем жил? </p>
+            <p>(хотел просто расписать как стартанул в реверсе, но этот рассказ сильно пересекся с моей жизнью) </p>
+            <p>Довольно тяжелая история
+                Начал я с начала третьего курса(не поздно ли) и просто постарался выбрать приоритетное направление в ctf
+                и направление к которому как мне кажется я бы мог посвятить всю свою жизнь, которым я бы хотел
+                попробовать себя, мне показалось, что для меня ближе всего это реверс. Но дисклеймер, почти не возможно
+                выбирать направление, когда ты ни об одном направлении не знаешь ровным счётом ничего - я думаю что
+                лучшее действие в этом случае попробовать делать хоть что-то, так я начал смотреть немного про реверс.
+                Но на самом деле я смотрел ровным счетом нихрена. Просто нервничал и не знал что делать, абсолютно. </p>
+            <p> Следующий поворотный этап в моей жизни произошел, когда прекрасная девушка Ксения Наумова пыталась
+                набрать с нашего вуза к себе на стажировку(пожалуй она действительно повлияла на мою жизнь, за что ей
+                большое спасибо), но ее направление было связано с сетями, когда я расписывал ей информацию о себе я
+                написал, что меня интересует реверс, хотя язык ассемблера в глаза не видел в то время, чтож мой выбор
+                сильно повлиял на мою судьбу. Она не предложила мне участвовать в своей стажировке, но передала мое
+                резюме великому и могучему Алексею Вишнякову(aka главный в реверсе ВПО).
+                В тот же день, мне позвонил рекрутер и чтож, теперь у меня было 4 дня выучить реверс с нуля, что конечно
+                не возможно. Но по крайней мере я круто поработал за 4 дня и получил с разных статей первое
+                представление, что же такое реверс.</p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
         </ol>
     </main>
 
